# aio-ultimate-sitemap-parser

./: main.py  pyproject.toml  setup.py
tests/: test_url_utils.py
usp/: fetch_parse.py  helpers.py  tree.py
usp/objects/: page.py  sitemap.py
usp/util/: url.py
usp/web_client/: abstract_client.py  aiohttp_client.py
