[tool.poetry]
name = "ultimate-sitemap-parser"
packages = [
    {include = "usp"}
]
version = "0.1"
description = "Ultimate Sitemap Parser"
authors = ["Linas Valiukas <linas@media.mit.edu>", "Hal Roberts <hroberts@cyber.law.harvard.edu>"]
license = "GPLv3+"
readme = "README.rst"
homepage = "https://github.com/mediacloud/ultimate-sitemap-parser"
keywords = ["sitemap", "sitemap-xml", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Markup :: XML"
]

[tool.poetry.dependencies]
python = "^3.11"
requests = ">=2.31.0"
python-dateutil = ">=2.1,<3.0.0"
aiohttp = "^3.9.3"
fake-useragent = "^1.4.0"
charset-normalizer = "^3.3.2"

[tool.poetry.dev-dependencies]
requests_mock = ">=1.6.0,<2.0"
pytest = ">=2.8"
pytest-runner = ">=4.2,<5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"